<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true" >

        <TextView
            android:id="@+id/nameLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:layout_row="0"
            android:layout_column="0"
            style="@style/ContactLabelTextView"/>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            style="@style/ContactTextView"/>

        <TextView
            android:id="@+id/phoneLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_phone"
            android:layout_row="1"
            android:layout_column="0"
            style="@style/ContactLabelTextView"/>

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            style="@style/ContactTextView"/>

        <TextView
            android:id="@+id/emailLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            android:layout_row="2"
            android:layout_column="0"
            style="@style/ContactLabelTextView"/>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            style="@style/ContactTextView"/>

        <TextView
            android:id="@+id/streetLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_street"
            android:layout_row="3"
            android:layout_column="0"
            style="@style/ContactLabelTextView"/>

        <TextView
            android:id="@+id/streetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            style="@style/ContactTextView"/>

        <TextView
            android:id="@+id/cityLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_city"
            android:layout_row="4"
            android:layout_column="0"
            style="@style/ContactLabelTextView"/>

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            style="@style/ContactTextView"/>

        <TextView
            android:id="@+id/stateLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"
            android:layout_row="5"
            android:layout_column="0"
            style="@style/ContactLabelTextView"/>

        <TextView
            android:id="@+id/stateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            style="@style/ContactTextView"/>

        <TextView
            android:id="@+id/zipLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_zip"
            android:layout_row="6"
            android:layout_column="0"
            style="@style/ContactLabelTextView"/>

        <TextView
            android:id="@+id/zipTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="1"
            style="@style/ContactTextView"/>
    </GridLayout>



</ScrollView>